Fixing Alignment with Experience Section

--- a/Website/css/styles.css
+++ b/Website/css/styles.css
@@ -120,6 +120,7 @@ img{
   text-align: center;
   font-weight: var(--font-bold);
   margin-bottom: .25rem;
+  padding-bottom: 0.75rem;
 }
 
 /*===== LAYOUT =====*/
@@ -193,6 +194,10 @@ img{
   color: var(--first-color-dark);
   font-size: 1.3rem;
   cursor: pointer;
+}
+
+.nav__logo{
+  color: var(--first-color);
 }
 
 /*=== Show menu ===*/
@@ -412,9 +417,9 @@ img{
 .timeline {
   position: relative;
   width: 660px;
-  margin: 0 auto;
+  margin: auto;
   margin-top: 20px;
-  padding: 1em 0;
+  padding: 2em 0;
   list-style-type: none;
 }
 
@@ -566,6 +571,7 @@ img{
   font-size: 0.77777em;
   font-style: italic;
   line-height: 1.5em;
+  color: var(--first-color-darken);
 }
 
 .direction-r .desc {
@@ -827,4 +833,100 @@ body.dark-theme{
     margin-left: auto;
     margin-right: auto;
   }  
+}
+
+@media screen and (max-width: 660px) {
+
+  .timeline {
+     width: 100%;
+    padding: 4em 0 1em 0;
+  }
+  
+  .timeline li {
+    padding: 2em 0;
+  }
+  
+  .direction-l,
+  .direction-r {
+    float: none;
+    width: 100%;
+  
+    text-align: center;
+  }
+  
+  .flag-wrapper {
+    text-align: center;
+  }
+  
+  .flag {
+    background: rgb(255,255,255);
+    z-index: 15;
+  }
+  
+  .direction-l .flag:before,
+  .direction-r .flag:before {
+    position: absolute;
+    top: -30px;
+    left: 50%;
+    content: ' ';
+    display: block;
+    width: 12px;
+    height: 12px;
+    margin-left: -9px;
+    background: var(--first-color-lighten);
+    border-radius: 10px;
+    border: 4px solid var(--first-color);
+    z-index: 10;
+  }
+  
+  .direction-l .flag:after,
+  .direction-r .flag:after {
+    content: "";
+    position: absolute;
+    left: 50%;
+    top: -8px;
+    height: 0;
+    width: 0;
+    margin-left: -8px;
+    border: solid transparent;
+    border-bottom-color: var(--first-color-lighten);
+    border-width: 8px;
+    pointer-events: none;
+  }
+  
+  .time-wrapper {
+    display: block;
+    position: relative;
+    margin: 4px 0 0 0;
+    z-index: 14;
+  }
+  
+  .direction-l .time-wrapper {
+    float: none;
+  }
+  
+  .direction-r .time-wrapper {
+    float: none;
+  }
+  
+  .desc {
+    position: relative;
+    margin: 1em 0 0 0;
+    padding: 1em;
+    background: rgb(254, 254, 254);
+    -webkit-box-shadow: 0 0 1px rgba(0,0,0,0.20);
+    -moz-box-shadow: 0 0 1px rgba(0,0,0,0.20);
+    box-shadow: 0 0 1px rgba(0,0,0,0.20);
+    z-index: 15;
+    color: var(--first-color-darken);
+  }
+  
+  .direction-l .desc,
+  .direction-r .desc {
+    position: relative;
+    margin: 1em 1em 0 1em;
+    padding: 1em;
+    
+    z-index: 15;
+  }
 }
